# heumilk

./: .gitignore  CHANGELOG.md  heumilk.cabal
.github/workflows/: haskell-ci.yml
app/: Main.hs
bench/: Main.hs
exe/: Main.hs
src/: NetworkPlot.hs
src/Heumilk/: Fitness.hs  Nat.hs  Network.hs  State.hs
tests/: test.hs
