cabal-version:      2.4
name:               heumilk
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Lukas Schneiderbauer
maintainer:         lukas.schneiderbauer@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

tested-with: GHC==9.2.8

library
    exposed-modules:  Heumilk.State
                      Heumilk.Fitness

    -- Modules included in this library but not exported.
    other-modules: Heumilk.Network

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base >= 4.16.4.0,
                      -- MissingH >= 1.6.0.0,
                      -- safe >= 0.3.19,
                      -- containers >= 0.6.5.1,
                      QuickCheck,
                      extra >= 1.7.14,
                      vector >= 0.13.0,
                      matrices >= 0.5.0,
                      random >= 1.2.1
    hs-source-dirs:   src
    default-language: Haskell2010

executable exe
    main-is: Main.hs

    build-depends:
        base >= 4.16.4.0,
        heumilk

    hs-source-dirs:   exe
    default-language: Haskell2010

benchmark bench
    main-is: Main.hs
    type: exitcode-stdio-1.0

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base >= 4.16.4.0,
        criterion >= 1.6.3.0,
        heumilk

    hs-source-dirs:   bench
    default-language: Haskell2010

test-suite test
    default-language: Haskell2010
    type: exitcode-stdio-1.0
    hs-source-dirs: tests
    main-is: test.hs
    build-depends:
        base >= 4.16.4.0,
        tasty >= 1.4.3,
        tasty-hunit >= 0.10.0.3,
        tasty-quickcheck >= 0.10.2,
        matrices >= 0.5.0,
        heumilk